# bemserver-core

./: .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  MIGRATIONS.rst  README.rst  alembic.ini  celerybeat-schedule.db  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build-release.yaml  tests.yaml
bemserver_core/: __init__.py  auth.py  authentication.py  authorization.polar  authorization.py  celery.py  commands.py  csv_io.py  database.py  email.py  exceptions.py  plugin.py  scheduler.py  settings.py  testutils.py  time_utils.py  utils.py
bemserver_core/common/: __init__.py  property_type.py  units.py  units.txt
bemserver_core/input_output/: __init__.py  base.py  sites_io.py  timeseries_data_io.py  timeseries_io.py
bemserver_core/migrations/: __init__.py  env.py
bemserver_core/model/: __init__.py  authorization.polar  campaigns.py  energy.py  event.py  events.py  exceptions.py  notifications.py  processors.py  sites.py  timeseries.py  timeseries_data.py  units.py  users.py  weather.py
bemserver_core/process/: cleanup.py  completeness.py  custom_operation.py  degree_days.py  energy_consumption.py  energy_power.py  forward_fill.py  outliers.py  weather.py
bemserver_core/processors/: __init__.py  base.py  cleanup.py
bemserver_core/scheduled_tasks/: __init__.py  authorization.polar  check_missing.py  check_outliers.py  cleanup.py  download_weather_data.py
docs/deployment/: README.rst
migrations/: env.py
requirements/: dev.in  dev.txt  install-min.in  install-min.txt  install.txt  tests-min.in  tests-min.text  tests-min.txt  tests.in  tests.txt
samples/: README.rst  sample_db.py
samples/csv_files/: buildings.csv  sites.csv  spaces.csv  storeys.csv  timeseries.csv  zones.csv
src/bemserver_core/: __init__.py  alembic.ini  authorization.py  celery.py  celery_worker.py  commands.py  database.py  email.py  exceptions.py  expression_eval.py  plugins.py  process.py  settings.py  time_utils.py  utils.py
tests/: conftest.py  requirements.txt  test_authorization.py  test_celery.py  test_commands.py  test_core.py  test_csv_io.py  test_database.py  test_email.py  test_expression_eval.py  test_plugin.py  test_process.py  test_time_utils.py  utils.py
tests/analysis/: test_completeness.py
tests/common/: test_property_type.py  test_units.py
tests/input_output/: test_base_io.py  test_sites_io.py  test_timeseries_data_io.py  test_timeseries_io.py
tests/model/: test_campaigns.py  test_energy.py  test_event.py  test_events.py  test_expressions.py  test_notifications.py  test_sites.py  test_tasks.py  test_timeseries.py  test_timeseries_data.py  (+3 more)
(+144 files in other folders)
