[project]
name = "bemserver-core"
version = "0.18.4"
description = "BEMServer Core"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
  { name = "Jérôme Lafréchoux", email = "jlafrechoux@nobatek.inef4.com" },
  { name = "David Frédérique", email = "dfrederique@nobatek.inef4.com" },
]
maintainers = [
  { name = "Jérôme Lafréchoux", email = "jlafrechoux@nobatek.inef4.com" },
  { name = "David Frédérique", email = "dfrederique@nobatek.inef4.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
  "psycopg>=3.1.10,<4.0",
  "sqlalchemy>=2.0.8,<3.0",
  "pandas>=2.2,<3.0",
  "pint>=0.23.0",
  "argon2_cffi>=23.1.0",
  "oso>=0.27.3,<0.28",
  "alembic>=1.8.0,<2.0",
  "click>=8.1.3,<9.0",
  "celery>=5.3.1,<6.0",
  "redis>=4.3.4,<5.0",
  "requests>=2.28.2",
]

[project.scripts]
bemserver_setup_db = "bemserver_core.commands:setup_db_cmd"
bemserver_create_user = "bemserver_core.commands:create_user_cmd"
bemserver_db_current = "bemserver_core.commands:db_current_cmd"
bemserver_db_upgrade =" bemserver_core.commands:db_upgrade_cmd"
bemserver_db_downgrade = "bemserver_core.commands:db_downgrade_cmd"

[project.urls]
Issues = "https://github.com/bemserver/bemserver-core/issues"
Source = "https://github.com/bemserver/bemserver-core"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
  "docs/",
  "tests/",
  "CHANGELOG.rst",
  "MIGRATIONS.rst",
  "tox.ini",
]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "testing", "db", "science", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
testing = ["pytest", "pytest_postgresql"]
db = ["psycopg", "sqlalchemy", "alembic"]
science = ["numpy", "pandas"]

[tool.pytest.ini_options]
norecursedirs = ".git .tox docs env venv"
addopts = "-v --tb=short"
